<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Kinfo</string>
    <string name="logo">logo</string>
    <string name="search_kinfo">SEARCH KINFO</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOG IN</string>
    <string name="kids_name">Kid\'s name</string>
    <string name="password">Password (minimum 6 symbols)</string>
    <string name="kids_name_full">Kid\'s name (full)</string>
    <string name="add_kid">Add Kid</string>
    <string name="food_allergies">Food allergies and dislikes</string>
    <string name="animal_allergies">Animal allergies and dislikes</string>
    <string name="message">Message to other grownups</string>
    <string name="kids_favorite_animal">Password (kid\'s favorite animal)</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="next">NEXT</string>
    <string name="add_grownup">Add grown up</string>
    <string name="grownups_name_full">Grown up\'s name (full)</string>
    <string name="relation_to_kid">Relationship to kid</string>
    <string name="phone_number">Mobile phone number</string>
    <string name="address">Address - street, city</string>
    <string name="add_extra_grownup">ADD ANOTHER GROWN UP</string>
    <string name="finish">FINISH</string>
    <string name="name">Filip Danielsson</string>
    <string name="hi">Hi!</string>
    <string name="relationship">Mum</string>
    <string name="grownups_name_SET">Louise</string>
    <string name="kids_favorite_animal_check">Password again</string>
    <string name="email">Email address</string>
    <string name="email_check">Email address (again)</string>
    <string name="title_activity_login_kid">LoginKidActivity</string>
    <string name="gluten_intolerant">Gluten intolerant</string>
    <string name="no">No</string>
    <string name="email_address">Email address</string>
    <string name="create_new_user">Create new user</string>
    <string name="password_check">Password (again)</string>
    <string name="pass">Password</string>
    <string name="contentdescription">contentdescription</string>
    <string name="placeholder">placeholder</string>
    <string name="sign_out">Sign out</string>
    <string name="edit_profile">Edit profile</string>
</resources>
