<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddKidActivity"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    >

    <TextView
        android:id="@+id/Add_kid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_black"
        android:text="@string/add_kid"
        android:textSize="35sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorPrimaryDark"
        />


    <Button
        android:id="@+id/add_photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/add_photo_button"
        android:layout_below="@id/Add_kid"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:id="@+id/linearlayout1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_photo"
        android:layout_marginTop="50dp">

        <EditText
            android:id="@+id/editText_addKidsName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kids_name_full"
            />

        <EditText
            android:id="@+id/editText_foodAllergies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/food_allergies"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/editText_animalAllergies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/animal_allergies"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/editText_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/message"
            android:layout_marginTop="20dp"

            />

        <EditText
            android:id="@+id/editText_favoriteAnimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kids_favorite_animal"
            android:layout_marginTop="20dp"

            />
        
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"

        >

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:textSize="18sp"
            android:background="@drawable/button_transparent_blue"
            android:textColor="@color/colorPrimaryDark"

            />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:textSize="18sp"
            android:background="@drawable/button_orange"
            android:textColor="@color/colorWhite"
            />


    </LinearLayout>


</RelativeLayout>
