<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateUser"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    >

    <TextView
        android:id="@+id/Create_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_black"
        android:text="@string/create_new_user"
        android:textSize="35sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorPrimaryDark"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Create_user"
        android:layout_marginTop="50dp"
        android:layout_above="@id/buttonlayout"
        android:layout_marginBottom="10dp"
        tools:context="elias.lind.kinfo.AddKidActivity"
        >

        <LinearLayout
            android:id="@+id/linearlayout1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:inputType="textEmailAddress"
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                />

            <EditText
                android:inputType="textEmailAddress"
                android:id="@+id/editText_emailcheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_check"
                android:layout_marginTop="20dp"
                />

            <EditText
                android:inputType="textVisiblePassword"
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginTop="20dp"
                />

            <EditText
                android:inputType="textVisiblePassword"
                android:id="@+id/editText_password_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_check"
                android:layout_marginTop="20dp"

                />

        </LinearLayout>


    </ScrollView>


    <LinearLayout
        android:id="@+id/buttonlayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"

        >

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:textSize="18sp"
            android:background="@drawable/button_transparent_blue"
            android:textColor="@color/colorPrimaryDark"
            android:onClick="cancel"

            />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:textSize="18sp"
            android:background="@drawable/button_orange"
            android:textColor="@color/colorWhite"
            android:onClick="next"
            />


    </LinearLayout>


</RelativeLayout>
