<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchKinfoActivity"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:weightSum="100"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="70"
        >

        <ImageView
            android:id="@+id/kinfoLogo"
            android:layout_width="173dp"
            android:layout_height="238dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/kidfo"
            android:layout_marginTop="70dp"/>

        <ImageView
            android:id="@+id/kinfoText"
            android:layout_width="252dp"
            android:layout_height="342dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/kinfo"
            android:layout_below="@id/kinfoLogo"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonSearchKinfo"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:windowSoftInputMode="adjustPan"

            >

            <android.support.v7.widget.AppCompatEditText
                android:inputType="text"
                android:id="@+id/editText_kidsname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/kids_name_full"
                app:backgroundTint="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                />


            <android.support.v7.widget.AppCompatEditText
                android:inputType="textVisiblePassword"
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/pass"
                app:backgroundTint="@color/colorWhite"
                android:textColorHint="@color/colorWhite"

                />

            <Button
                android:id="@+id/buttonLoginBig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_kinfo"

                android:layout_marginTop="20dp"
                android:background="@drawable/button_orange"
                android:textSize="18sp"
                android:textColor="@color/colorBlack"
                android:onClick="login"
                />

        </LinearLayout>


    </RelativeLayout>

</LinearLayout>

